test: add lcov files to sonarqube checks

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,11 +10,11 @@ sonar.sources=common, core, fwoa-core, deployment
 
 # Focusing sonarqube analysis on non test code first and reducing noise from analysis of test code. Projects
 # can customize the exclusions to include analyzing of test code if desired
-# **/test/**, \
-#     **/tests/**, \
-#     **/test*, \
+
 sonar.exclusions=\
-    
+    **/test/**, \
+    **/tests/**, \
+    **/test*, \
     **/node_modules/**, \
     deployment/*-assets/**, \
     deployment/open-source/**, \
@@ -44,8 +44,9 @@ sonar.coverage.exclusions=\
 # so we have to provide an explicit list of reportPaths
 #
 # Example: Uncomment next section for javascript/typescript code
-#sonar.javascript.lcov.reportPaths= \
-#    source/test/coverage-reports/jest/example-function-js/lcov.info
+# source/test/coverage-reports/jest/example-function-js/lcov.info
+sonar.javascript.lcov.reportPaths= \
+   **/temp/coverage/lcov-report/lcov.info
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
