--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -46,7 +46,7 @@ sonar.coverage.exclusions=\
 # Example: Uncomment next section for javascript/typescript code
 # source/test/coverage-reports/jest/example-function-js/lcov.info
 sonar.javascript.lcov.reportPaths= \
-   **/temp/coverage/lcov-report/lcov.info
+   fwoa-core/persistence-ddb/temp/coverage/lcov.info
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
