--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,7 +22,8 @@ sonar.exclusions=\
     **/lib/**/*.js, \
     **/lib/**/*.map, \
     **/lib/**/*d.ts, \
-    **/lib/**/*.json
+    **/lib/**/*.json \
+    common/scripts/**
 
 
 # Code coverage Specific Properties
