chore: edit sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,10 +11,11 @@ sonar.sources=common, core, fwoa-core, deployment
 # Focusing sonarqube analysis on non test code first and reducing noise from analysis of test code. Projects
 # can customize the exclusions to include analyzing of test code if desired
 
+    # **/test/**, \
+    # **/tests/**, \
+    # **/test*, \
+
 sonar.exclusions=\
-    **/test/**, \
-    **/tests/**, \
-    **/test*, \
     **/node_modules/**, \
     deployment/*-assets/**, \
     deployment/open-source/**, \
