chore: add all cov files to config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,11 +11,10 @@ sonar.sources=common, core, fwoa-core, deployment
 # Focusing sonarqube analysis on non test code first and reducing noise from analysis of test code. Projects
 # can customize the exclusions to include analyzing of test code if desired
 
-    # **/test/**, \
-    # **/tests/**, \
-    # **/test*, \
-
 sonar.exclusions=\
+    **/test/**, \
+    **/tests/**, \
+    **/test*, \
     **/node_modules/**, \
     deployment/*-assets/**, \
     deployment/open-source/**, \
@@ -48,7 +47,13 @@ sonar.coverage.exclusions=\
 # Example: Uncomment next section for javascript/typescript code
 # source/test/coverage-reports/jest/example-function-js/lcov.info
 sonar.javascript.lcov.reportPaths= \
-   fwoa-core/persistence-ddb/temp/coverage/lcov.info
+    fwoa-core/persistence-ddb/temp/coverage/lcov.info \
+    core/eslint-custom/temp/coverage/lcov.info \
+    fwoa-core/authz-rbac/temp/coverage/lcov.info \
+    fwoa-core/authz-smart/temp/coverage/lcov.info \
+    fwoa-core/interface/temp/coverage/lcov.info \
+    solutions/deployment/temp/coverage/lcov.info \
+    solutions/smart-deployment/temp/coverage/lcov.info
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
