--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,7 +22,8 @@ sonar.exclusions=\
     **/lib/**/*.js, \
     **/lib/**/*.map, \
     **/lib/**/*d.ts, \
-    **/lib/**/*.json \
+    **/lib/**/*.json 
+
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
@@ -45,12 +46,12 @@ sonar.coverage.exclusions=\
 # Example: Uncomment next section for javascript/typescript code
 # source/test/coverage-reports/jest/example-function-js/lcov.info
 sonar.javascript.lcov.reportPaths= \
-    fwoa-core/persistence-ddb/temp/coverage/lcov.info \
-    core/eslint-custom/temp/coverage/lcov.info \
-    fwoa-core/authz-rbac/temp/coverage/lcov.info \
-    fwoa-core/authz-smart/temp/coverage/lcov.info \
-    fwoa-core/interface/temp/coverage/lcov.info \
-    solutions/deployment/temp/coverage/lcov.info \
+    fwoa-core/persistence-ddb/temp/coverage/lcov.info, \
+    core/eslint-custom/temp/coverage/lcov.info, \
+    fwoa-core/authz-rbac/temp/coverage/lcov.info, \
+    fwoa-core/authz-smart/temp/coverage/lcov.info, \
+    fwoa-core/interface/temp/coverage/lcov.info, \
+    solutions/deployment/temp/coverage/lcov.info, \
     solutions/smart-deployment/temp/coverage/lcov.info
     
 # Encoding of the source files
