chore: improve sonar test coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,8 +22,8 @@ sonar.exclusions=\
     **/lib/**/*.js, \
     **/lib/**/*.map, \
     **/lib/**/*d.ts, \
-    **/lib/**/*.json 
-
+    **/lib/**/*.json,git \
+    common/scripts/* 
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
