chore: add missing comma

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,7 +22,7 @@ sonar.exclusions=\
     **/lib/**/*.js, \
     **/lib/**/*.map, \
     **/lib/**/*d.ts, \
-    **/lib/**/*.json,git \
+    **/lib/**/*.json,git, \
     common/scripts/* 
 
 # Code coverage Specific Properties
