chore: add search and routing coverage files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -51,6 +51,8 @@ sonar.javascript.lcov.reportPaths= \
     fwoa-core/authz-rbac/temp/coverage/lcov.info, \
     fwoa-core/authz-smart/temp/coverage/lcov.info, \
     fwoa-core/interface/temp/coverage/lcov.info, \
+    fwoa-core/routing/temp/coverage/lcov-report, \
+    fwoa-core/search-es/temp/coverage/lcov.info, \
     solutions/deployment/temp/coverage/lcov.info, \
     solutions/smart-deployment/temp/coverage/lcov.info
     
