--- a/.github/workflows/merge-develop-to-stage.yml
+++ b/.github/workflows/merge-develop-to-stage.yml
@@ -26,10 +26,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   deploy-fhir:
+    needs: pre-deployment-check
     uses:
       ./.github/workflows/deploy.yaml  
     secrets: inherit 
   deploy-smart-fhir:
+    needs: pre-deployment-check
     uses:
       ./.github/workflows/deploy-smart.yaml  
     secrets: inherit  
