chore: update Sonarqube properties to include test coverage files (#116)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,13 +10,20 @@ sonar.sources=common, core, fwoa-core, deployment
 
 # Focusing sonarqube analysis on non test code first and reducing noise from analysis of test code. Projects
 # can customize the exclusions to include analyzing of test code if desired
+
 sonar.exclusions=\
     **/test/**, \
     **/tests/**, \
     **/test*, \
     **/node_modules/**, \
-    deployment/*-assets/** \
-    deployment/open-source
+    deployment/*-assets/**, \
+    deployment/open-source/**, \
+    **/temp/**, \
+    **/lib/**/*.js, \
+    **/lib/**/*.map, \
+    **/lib/**/*d.ts, \
+    **/lib/**/*.json,git, \
+    common/scripts/* 
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
@@ -37,8 +44,17 @@ sonar.coverage.exclusions=\
 # so we have to provide an explicit list of reportPaths
 #
 # Example: Uncomment next section for javascript/typescript code
-#sonar.javascript.lcov.reportPaths= \
-#    source/test/coverage-reports/jest/example-function-js/lcov.info
-
+# source/test/coverage-reports/jest/example-function-js/lcov.info
+sonar.javascript.lcov.reportPaths= \
+    fwoa-core/persistence-ddb/temp/coverage/lcov.info, \
+    core/eslint-custom/temp/coverage/lcov.info, \
+    fwoa-core/authz-rbac/temp/coverage/lcov.info, \
+    fwoa-core/authz-smart/temp/coverage/lcov.info, \
+    fwoa-core/interface/temp/coverage/lcov.info, \
+    fwoa-core/routing/temp/coverage/lcov-report, \
+    fwoa-core/search-es/temp/coverage/lcov.info, \
+    solutions/deployment/temp/coverage/lcov.info, \
+    solutions/smart-deployment/temp/coverage/lcov.info
+    
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
