fix: update npm links

--- a/fwoa-core/persistence-ddb/package.json
+++ b/fwoa-core/persistence-ddb/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/aws-solutions/fhir-works-on-aws",
   "repository": {
     "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-persistence-ddb.git"
+    "url": "https://github.com/aws-solutions/fhir-works-on-aws.git"
   },
   "license": "Apache-2.0",
   "author": {
