--- a/fwoa-core/routing/package.json
+++ b/fwoa-core/routing/package.json
@@ -2,10 +2,10 @@
   "name": "@aws/fhir-works-on-aws-routing",
   "version": "6.6.2",
   "description": "FHIR Works on AWS routing implementation",
-  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/routing",
+  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws",
   "repository": {
     "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-routing.git"
+    "url": "https://github.com/aws-solutions/fhir-works-on-aws.git"
   },
   "license": "Apache-2.0",
   "author": {
