--- a/fwoa-utilities/package.json
+++ b/fwoa-utilities/package.json
@@ -2,10 +2,10 @@
   "name": "@aws/fhir-works-on-aws-utilities",
   "version": "1.1.0",
   "description": "FHIR Works on AWS utilities",
-  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/utilities",
+  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws",
   "repository": {
     "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-utilities.git"
+    "url": "https://github.com/aws-solutions/fhir-works-on-aws.git"
   },
   "license": "Apache-2.0",
   "author": {
