--- a/fwoa-core/authz-rbac/package.json
+++ b/fwoa-core/authz-rbac/package.json
@@ -2,10 +2,10 @@
   "name": "@aws/fhir-works-on-aws-authz-rbac",
   "version": "6.0.0",
   "description": "FHIR Works on AWS role base access control",
-  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/authz-rbac",
+  "homepage": "https://github.com/aws-solutions/fhir-works-on-aws",
   "repository": {
     "type": "git",
-    "url": "git://github.com/awslabs/fhir-works-on-aws-authz-rbac.git"
+    "url": "https://github.com/aws-solutions/fhir-works-on-aws.git"
   },
   "license": "Apache-2.0",
   "author": {
