--- a/.viperlightignore
+++ b/.viperlightignore
@@ -63,6 +63,8 @@ fwoa-core/routing/src/router/middlewares/setLogger.test.ts:72
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:132
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:189
 fwoa-core/interface/src/inputExampleEncryptSelectedField.json:18
+#Email for maintenance mode
+README.md:4
 
 # PDF Implementation Guide
 FHIR Works on AWS Implementation Guide - 24-MAR-2023 - v6.0.0.pdf
