--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -88,7 +88,11 @@
    *
    * PNPM documentation: https://pnpm.io/package_json#pnpmoverrides
    */
-  "globalOverrides": { "jsonwebtoken@<=8.5.1": ">=9.0.0", "jsonwebtoken@<9.0.0": ">=9.0.0" },
+  "globalOverrides": {
+    "jsonwebtoken@<=8.5.1": ">=9.0.0",
+    "jsonwebtoken@<9.0.0": ">=9.0.0",
+    "xml2js@<0.5.0": ">=0.5.0"
+  },
 
   /**
    * The `globalPeerDependencyRules` setting provides various settings for suppressing validation errors
