fix: changes to notice and package json

--- a/common/autoinstallers/commitlint/package.json
+++ b/common/autoinstallers/commitlint/package.json
@@ -5,5 +5,11 @@
   "dependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2"
+  },
+  "license": "Apache-2.0",
+  "author": {
+    "name": "Amazon Web Services",
+    "email": "fhir-works-on-aws-dev@amazon.com",
+    "url": "https://aws.amazon.com/solutions"
   }
 }
