--- a/common/autoinstallers/rush-prettier/package.json
+++ b/common/autoinstallers/rush-prettier/package.json
@@ -5,5 +5,11 @@
   "dependencies": {
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3"
+  },
+  "license": "Apache-2.0",
+  "author": {
+    "name": "Amazon Web Services",
+    "email": "fhir-works-on-aws-dev@amazon.com",
+    "url": "https://aws.amazon.com/solutions"
   }
 }
