feat: auth framework for tools

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -156,7 +156,7 @@
     },
     {
       "name": "dotenv",
-      "allowedCategories": ["production"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "errorhandler",
