--- a/.github/workflows/smart-integ-inferno-test-periodically.yaml
+++ b/.github/workflows/smart-integ-inferno-test-periodically.yaml
@@ -3,10 +3,6 @@ on:
   schedule:
     - cron: '0 13 1,15 * *'
 
-env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.SMART_AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.SMART_AWS_SECRET_ACCESS_KEY }}
-
 jobs:
   inferno-test:
     name: Run Inferno Tests - enableMultiTenancy=${{ matrix.enableMultiTenancy }}
@@ -23,6 +19,9 @@ jobs:
             region: us-east-2
             serviceUrlSuffix: /tenant/tenant1
             smartServiceURLSecretName: MULTITENANCY_SMART_SERVICE_URL
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - uses: actions/checkout@v3
         with:
@@ -31,6 +30,12 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: '2.6'
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-region: ${{ matrix.region }}
+          role-to-assume: ${{ secrets.AWS_ACCESS_ROLE_ARN }}
+          role-duration-seconds: 7200
       - name: Install dependency
         run: |
           gem install bundler
@@ -87,9 +92,18 @@ jobs:
             subscriptionsNotificationsTableSecretName: MULTITENANCY_SMART_SUBSCRIPTIONS_NOTIFICATIONS_TABLE
             subscriptionsEndpointSecretName: MULTITENANCY_SMART_SUBSCRIPTIONS_ENDPOINT
             subscriptionsApiKeySecretName: MULTITENANCY_SMART_SUBSCRIPTIONS_API_KEY
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-region: ${{ matrix.region }}
+          role-to-assume: ${{ secrets.AWS_ACCESS_ROLE_ARN }}
+          role-duration-seconds: 7200
       - name: Base Action
         uses: ./.github/actions/baseAction
       - name: Execute tests
@@ -113,3 +127,21 @@ jobs:
         run: |
           cd ./solutions/smart-deployment
           node ../../common/scripts/install-run-rushx.js int-test
+  slack-notification:
+    needs: [inferno-test, custom-integration-tests]
+    runs-on: ubuntu-20.04
+    if: failure()
+    steps:
+      - name: Slack notification when inferno tests or integration tests failed
+        id: slack
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          payload: |
+            {
+              "slack_message": "On ${{ github.ref_name }} branch of ${{ github.repository }}:",
+              "inferno_result": "${{ needs.inferno-test.result }}",
+              "integration_result": "${{ needs.custom-integration-tests.result }}",
+              "workflow_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_SCHEDULED_INTEGRATION_WEBHOOK_URL }}
