--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,7 @@ jobs:
   build-validate:
     name: Build and validate
     runs-on: ubuntu-20.04
+    environment: FWoA Checks
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -45,6 +46,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    environment: FWoA Checks
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -118,6 +120,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    environment: FWoA Checks
     steps:
       - uses: actions/checkout@v3
         with:
@@ -175,6 +178,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    environment: FWoA Checks
     steps:
       - name: Checkout
         uses: actions/checkout@v3
