--- a/.github/workflows/deploy-smart.yaml
+++ b/.github/workflows/deploy-smart.yaml
@@ -6,6 +6,7 @@ jobs:
   build-validate:
     name: Build and validate
     runs-on: ubuntu-20.04
+    environment: FWoA Checks
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -106,6 +107,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    environment: FWoA Checks
     steps:
       - uses: actions/checkout@v3
         with:
