--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -6,6 +6,7 @@ jobs:
   labeler:
     runs-on: ubuntu-latest
     name: Label the PR size
+    environment: FWoA Checks
     steps:
       - uses: codelytv/pr-size-labeler@v1
         with:
