--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -8,6 +8,7 @@ jobs:
   lint-pr:
     name: Validate PR title
     runs-on: ubuntu-20.04
+    environment: FWoA Checks
     steps:
       - uses: amannn/action-semantic-pull-request@v4
         env:
