--- a/.github/workflows/pnpm-audit-pr.yml
+++ b/.github/workflows/pnpm-audit-pr.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   pnpm-audit:
     runs-on: ubuntu-20.04
+    environment: FWoA Checks
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
