--- a/.github/workflows/solutions-pipeline.yml
+++ b/.github/workflows/solutions-pipeline.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+    environment: FWoA Checks
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
