chore: Add environment to gh workflows (#159)

--- a/.github/workflows/smart-integ-inferno-test-periodically.yaml
+++ b/.github/workflows/smart-integ-inferno-test-periodically.yaml
@@ -22,6 +22,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    environment: FWoA Checks
     steps:
       - uses: actions/checkout@v3
         with:
@@ -67,7 +68,7 @@ jobs:
   custom-integration-tests:
     needs: inferno-test
     name: Run custom integration tests - enableMultiTenancy=${{ matrix.enableMultiTenancy }}
-    environment: FWoA Integ Test Env
+    environment: FWoA Checks
     runs-on: ubuntu-20.04
     strategy:
       matrix:
@@ -131,6 +132,7 @@ jobs:
     needs: [inferno-test, custom-integration-tests]
     runs-on: ubuntu-20.04
     if: failure()
+    environment: FWoA Checks
     steps:
       - name: Slack notification when inferno tests or integration tests failed
         id: slack
