--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -60,6 +60,7 @@
     "sort-package-json": "^1.57.0",
     "standard-version": "^9.3.2",
     "ts-jest": "^26.4.4",
+    "ts-node": "^10.3.0",
     "typescript": "^4.9.4"
   },
   "engines": {
