feat: added dry run

--- a/fwoa-tools/tsconfig.json
+++ b/fwoa-tools/tsconfig.json
@@ -12,7 +12,8 @@
     "declaration": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"]
 }
