--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -44,6 +44,7 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^14",
     "@types/qs": "^6.9.7",
+    "@types/yargs": "^17.0.22",
     "aws-sdk": "^2.1000.0",
     "aws-sdk-mock": "^5.1.0",
     "chance": "^1.1.7",
@@ -60,7 +61,9 @@
     "sort-package-json": "^1.57.0",
     "standard-version": "^9.3.2",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.3.0",
+    "typescript": "^4.9.4",
+    "yargs": "^16.2.0"
   },
   "engines": {
     "node": ">=18.0.0"
