--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -44,6 +44,7 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^14",
     "@types/qs": "^6.9.7",
+    "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.22",
     "aws-sdk": "^2.1000.0",
     "aws-sdk-mock": "^5.1.0",
@@ -63,6 +64,7 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^10.3.0",
     "typescript": "^4.9.4",
+    "uuid": "^8.3.2",
     "yargs": "^16.2.0"
   },
   "engines": {
