revert: remove envs from missed files

--- a/.github/workflows/smart-integ-inferno-test-periodically.yaml
+++ b/.github/workflows/smart-integ-inferno-test-periodically.yaml
@@ -67,6 +67,7 @@ jobs:
   custom-integration-tests:
     needs: inferno-test
     name: Run custom integration tests - enableMultiTenancy=${{ matrix.enableMultiTenancy }}
+    environment: FWoA Integ Test Env
     runs-on: ubuntu-20.04
     strategy:
       matrix:
