--- a/fwoa-core/authz-smart/package.json
+++ b/fwoa-core/authz-smart/package.json
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@aws/fhir-works-on-aws-interface": "workspace:*",
-    "axios": "^0.21.4",
+    "axios": "0.25.0",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^1.12.1",
     "lodash": "^4.17.21"
