--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@aws/fhir-works-on-aws-authz-smart",
-  "version": "4.0.1",
-  "description": "FHIR Works on AWS SMART on FHIR authorization",
+  "name": "@aws/fhir-works-on-aws-tools",
+  "version": "1.1.0",
+  "description": "FHIR Works on AWS tools",
   "homepage": "https://github.com/aws-solutions/fhir-works-on-aws",
   "repository": {
     "type": "git",
@@ -19,32 +19,18 @@
     "build": "heft build --clean && rushx pkg-json-lint",
     "build-test": "heft test --clean && rushx pkg-json-lint",
     "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/* lib/*",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint-fix": "eslint --fix . --ext .ts,.tsx",
+    "lint-fix": "eslint . --fix",
     "local": "node .",
-    "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json .",
-    "release": "rush build && rush lint-fix && rush test",
+    "pkg-json-lint": "npmPkgJsonLint -c ../.npmpackagejsonlintrc.json .",
+    "prettier": "prettier --config '../.prettierrc.js' 'src/**/*.ts' --write",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
     "test": "heft test --clean --no-build && rushx pkg-json-lint",
-    "test-coverage": "jest --coverage",
     "watch": "tsc -w"
   },
-  "resolutions": {
-    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
-    "**/@typescript-eslint/parser": "^4.1.1",
-    "ansi-regex": "^5.0.1",
-    "axios": "^0.21.4",
-    "json5": "^2.2.2",
-    "jsonwebtoken": "^9.0.0",
-    "set-value": "^4.0.1"
-  },
   "dependencies": {
-    "@aws/fhir-works-on-aws-interface": "workspace:*",
     "axios": "0.25.0",
-    "jsonwebtoken": "^9.0.0",
-    "jwks-rsa": "^1.12.1",
-    "lodash": "^4.17.21"
+    "object-hash": "^3.0.0"
   },
   "devDependencies": {
     "@aws/eslint-config-fwoa-eslint-custom": "workspace:*",
@@ -52,28 +38,40 @@
     "@rushstack/heft": "0.49.0",
     "@rushstack/heft-jest-plugin": "0.4.2",
     "@rushstack/heft-node-rig": "1.11.11",
+    "@types/chance": "^1.1.1",
     "@types/heft-jest": "^1.0.3",
     "@types/jest": "^26.0.19",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.182",
     "@types/node": "^14",
-    "axios-mock-adapter": "^1.18.2",
-    "csv-load-sync": "^2.3.1",
-    "csv-writer": "^1.6.0",
+    "@types/object-hash": "^3.0.2",
+    "@types/qs": "^6.9.7",
+    "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.22",
+    "aws-sdk": "^2.1000.0",
+    "aws-sdk-mock": "^5.1.0",
+    "aws4-axios": "^2.4.9",
+    "chance": "^1.1.7",
+    "dotenv": "^16.0.3",
     "eslint": "^8.7.0",
-    "fs": "0.0.1-security",
     "jest": "^26.6.3",
+    "jest-each": "^26.6.2",
     "jest-mock-extended": "^1.0.8",
-    "jose": "^3.5.1",
-    "json-2-csv": "^3.17.2",
+    "jsonwebtoken": "^9.0.0",
     "npm-package-json-lint": "^6.3.0",
     "npm-package-json-lint-config-default": "^5.0.0",
+    "prettier": "^2.4.1",
+    "qs": "^6.10.3",
     "sort-package-json": "^1.57.0",
     "standard-version": "^9.3.2",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.3.0",
+    "typescript": "^4.9.4",
+    "uuid": "^8.3.2",
+    "yargs": "^16.2.0"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "stackname": "fhir-works-on-aws-tools"
 }
