chore: update viperlight

--- a/.viperlightignore
+++ b/.viperlightignore
@@ -25,6 +25,13 @@ solutions/deployment/scripts/provision-user.py:26
 solutions/deployment/scripts/provision-user.py:41
 solutions/smart-deployment/README.md:67
 solutions/smart-deployment/README.md:111
+fwoa-core/routing/src/router/validation/schemas/fhir.schema.v3.json:10255
+fwoa-core/routing/src/router/validation/schemas/fhir.schema.v3.json:10256
+fwoa-core/routing/src/router/validation/schemas/fhir.schema.v3.json:10260
+fwoa-core/routing/src/router/validation/schemas/fhir.schema.v3.json:10261
+fwoa-core/search-es/src/schema/compiledSearchParameters.4.0.1.json:6626
+fwoa-core/search-es/src/schema/compiledSearchParameters.4.0.1.json:6627
+fwoa-core/search-es/src/schema/compiledSearchParameters.4.0.1.json:6631
 fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4145
 fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4146
 fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4150
