--- a/fwoa-core/search-es/package.json
+++ b/fwoa-core/search-es/package.json
@@ -36,10 +36,11 @@
   },
   "resolutions": {
     "json5": "2.2.3",
-    "set-value": "^4.0.1"
+    "set-value": "^4.0.1",
+    "fast-xml-parser": "^4.2.4"
   },
   "dependencies": {
-    "@aws-sdk/client-sns": "^3.300.0",
+    "@aws-sdk/client-sns": "^3.50.0",
     "@aws-sdk/node-http-handler": "^3.52.0",
     "@aws/fhir-works-on-aws-interface": "workspace:*",
     "@elastic/elasticsearch": "7.13.0",
