--- a/fwoa-core/search-es/package.json
+++ b/fwoa-core/search-es/package.json
@@ -36,7 +36,8 @@
   },
   "resolutions": {
     "json5": "2.2.3",
-    "set-value": "^4.0.1"
+    "set-value": "^4.0.1",
+    "fast-xml-parser": "^4.2.4"
   },
   "dependencies": {
     "@aws-sdk/client-sns": "^3.50.0",
