--- a/fwoa-core/search-es/package.json
+++ b/fwoa-core/search-es/package.json
@@ -35,9 +35,9 @@
     "collectCoverage": true
   },
   "resolutions": {
+    "fast-xml-parser": "^4.2.4",
     "json5": "2.2.3",
-    "set-value": "^4.0.1",
-    "fast-xml-parser": "^4.2.4"
+    "set-value": "^4.0.1"
   },
   "dependencies": {
     "@aws-sdk/client-sns": "^3.50.0",
