--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -89,6 +89,7 @@
    * PNPM documentation: https://pnpm.io/package_json#pnpmoverrides
    */
   "globalOverrides": {
+    "fast-xml-parser": "^4.2.4",
     "jsonwebtoken@<=8.5.1": ">=9.0.0",
     "jsonwebtoken@<9.0.0": ">=9.0.0",
     "xml2js@<0.5.0": ">=0.5.0",
