--- a/fwoa-core/search-es/package.json
+++ b/fwoa-core/search-es/package.json
@@ -35,6 +35,7 @@
     "collectCoverage": true
   },
   "resolutions": {
+    "fast-xml-parser": "^4.2.4",
     "json5": "2.2.3",
     "set-value": "^4.0.1"
   },
