--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -89,7 +89,8 @@
    * PNPM documentation: https://pnpm.io/package_json#pnpmoverrides
    */
   "globalOverrides": {
-    "fast-xml-parser": "^4.2.4",
+    "fast-xml-parser": "^4.2.5",
+    "semver": "^7.5.2",
     "jsonwebtoken@<=8.5.1": ">=9.0.0",
     "jsonwebtoken@<9.0.0": ">=9.0.0",
     "xml2js@<0.5.0": ">=0.5.0",
