--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -127,7 +127,7 @@
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.22",
-    "aws-cdk": "2.61.0",
+    "aws-cdk": "^2.80.0",
     "chance": "^1.1.7",
     "dotenv": "^16.0.3",
     "esbuild": "^0.14.39",
