--- a/solutions/smart-deployment/package.json
+++ b/solutions/smart-deployment/package.json
@@ -113,7 +113,7 @@
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.22",
-    "aws-cdk": "2.61.0",
+    "aws-cdk": "^2.80.0",
     "chance": "^1.1.7",
     "esbuild": "^0.14.39",
     "eslint": "^8.7.0",
