--- a/solutions/smart-deployment/package.json
+++ b/solutions/smart-deployment/package.json
@@ -78,7 +78,7 @@
     "@aws/fhir-works-on-aws-search-es": "workspace:*",
     "@aws/fhir-works-on-aws-utilities": "workspace:*",
     "@types/aws-lambda": "^8.10.92",
-    "aws-cdk-lib": "^2.61.0",
+    "aws-cdk-lib": "^2.80.0",
     "aws-embedded-metrics": "^2.0.4",
     "aws-sdk": "^2.1000.0",
     "axios": "0.25.0",
@@ -113,7 +113,7 @@
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
     "@types/yargs": "^17.0.22",
-    "aws-cdk": "2.61.0",
+    "aws-cdk": "^2.80.0",
     "chance": "^1.1.7",
     "esbuild": "^0.14.39",
     "eslint": "^8.7.0",
