--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -25,7 +25,7 @@
     "prettier": "prettier --config '../.prettierrc.js' 'src/**/*.ts' --write",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
-    "test": "heft test --clean --no-build && rushx pkg-json-lint",
+    "test": "heft test --clean --no-build --test-path-pattern src/*.unit.test.ts && rushx pkg-json-lint",
     "watch": "tsc -w"
   },
   "dependencies": {
