--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "axios": "0.25.0",
-    "object-hash": "^3.0.0"
+    "object-hash": "^3.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@aws/eslint-config-fwoa-eslint-custom": "workspace:*",
