test: util unit test (#206)

--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -17,18 +17,18 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "heft build --clean && rushx pkg-json-lint",
-    "build-test": "heft test --clean && rushx pkg-json-lint",
+    "build-test": "UNIT_TEST=true heft test --clean && rushx pkg-json-lint",
     "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/* lib/*",
     "int-test": "jest --testPathPattern=src/integration-tests/*",
+    "jest": "jest",
     "lint-fix": "eslint . --fix",
     "local": "node .",
     "pkg-json-lint": "npmPkgJsonLint -c ../.npmpackagejsonlintrc.json .",
     "prettier": "prettier --config '../.prettierrc.js' 'src/**/*.ts' --write",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
-    "test": "heft test --clean --no-build && rushx pkg-json-lint",
-    "watch": "tsc -w",
-    "jest": "jest"
+    "test": "UNIT_TEST=true heft test --clean --no-build && rushx pkg-json-lint",
+    "watch": "tsc -w"
   },
   "jest": {
     "moduleFileExtensions": [
