--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -64,6 +64,7 @@
     "aws-sdk": "^2.1000.0",
     "aws-sdk-mock": "^5.1.0",
     "aws4-axios": "^2.4.9",
+    "axios-mock-adapter": "^1.18.2",
     "chance": "^1.1.7",
     "dotenv": "^16.0.3",
     "eslint": "^8.7.0",
