--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -20,6 +20,7 @@
     "build-test": "heft test --clean && rushx pkg-json-lint",
     "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/* lib/*",
     "int-test": "jest --testPathPattern=src/integration-tests/*",
+    "jest": "jest",
     "lint-fix": "eslint . --fix",
     "local": "node .",
     "pkg-json-lint": "npmPkgJsonLint -c ../.npmpackagejsonlintrc.json .",
@@ -27,19 +28,18 @@
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
     "test": "heft test --clean --no-build && rushx pkg-json-lint",
-    "watch": "tsc -w",
-    "jest": "jest"
+    "watch": "tsc -w"
   },
   "jest": {
     "moduleFileExtensions": [
       "ts",
       "js"
     ],
+    "testEnvironment": "node",
     "testRegex": ".test.ts",
     "transform": {
       "\\.(ts)$": "ts-jest"
-    },
-    "testEnvironment": "node"
+    }
   },
   "dependencies": {
     "axios": "0.26.0",
