build: update buildspec and SonarQube properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,7 +23,8 @@ sonar.exclusions=\
     **/lib/**/*.map, \
     **/lib/**/*d.ts, \
     **/lib/**/*.json,git, \
-    common/scripts/* 
+    common/scripts/*, \
+    deployment/cdk-solution-helper/**
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
