--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@
 # Refer to https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/
 # for details on sources and exclusions. Note also .gitignore which is used by sonarqube
 #
-sonar.sources=common, core, fwoa-core, deployment
+sonar.sources=common, core, fwoa-core, fwoa-tools, fwoa-utilities, deployment, solutions
 
 # Focusing sonarqube analysis on non test code first and reducing noise from analysis of test code. Projects
 # can customize the exclusions to include analyzing of test code if desired
