chore: update SonarQube properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,7 +24,8 @@ sonar.exclusions=\
     **/lib/**/*d.ts, \
     **/lib/**/*.json,git, \
     common/scripts/*, \
-    deployment/cdk-solution-helper/**
+    deployment/cdk-solution-helper/**, \
+    fwoa-utilities/javaHapiValidatorLambda
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
