chore: update SonarQube file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,7 +25,7 @@ sonar.exclusions=\
     **/lib/**/*.json,git, \
     common/scripts/*, \
     deployment/cdk-solution-helper/**, \
-    fwoa-utilities/javaHapiValidatorLambda
+    fwoa-utilities/javaHapiValidatorLambda/**
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
