chore: remove scripts from SonarQube scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,6 +26,7 @@ sonar.exclusions=\
     common/scripts/*, \
     deployment/cdk-solution-helper/**, \
     fwoa-utilities/javaHapiValidatorLambda/**
+    solutions/**/scripts/**
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
