--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,8 +25,10 @@ sonar.exclusions=\
     **/lib/**/*.json,git, \
     common/scripts/*, \
     deployment/cdk-solution-helper/**, \
-    fwoa-utilities/javaHapiValidatorLambda/**
-    solutions/**/scripts/**
+    fwoa-utilities/javaHapiValidatorLambda/**, \
+    solutions/**/replay-ddbToES.js, \
+    solutions/**/sort-key-migration.js, \
+    solutions/**/integration-tests/**
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
@@ -56,6 +58,7 @@ sonar.javascript.lcov.reportPaths= \
     fwoa-core/interface/temp/coverage/lcov.info, \
     fwoa-core/routing/temp/coverage/lcov-report, \
     fwoa-core/search-es/temp/coverage/lcov.info, \
+    fwoa-tools/temp/coverage/lcov.info, \
     solutions/deployment/temp/coverage/lcov.info, \
     solutions/smart-deployment/temp/coverage/lcov.info
     
