chore: update SonarQube properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,11 +28,15 @@ sonar.exclusions=\
     fwoa-utilities/javaHapiValidatorLambda/**, \
     solutions/**/replay-ddbToES.js, \
     solutions/**/sort-key-migration.js, \
-    solutions/**/integration-tests/**
+    solutions/**/integration-tests/**, \
+    fwoa-tools/src/export-script.py
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
-    **/jest.config.js
+    **/jest.config.js, \
+    solutions/**/scripts/**, \
+    solutions/**/bulkExport/**, \
+
 
 ## Python Specific Properties*
 # coverage
