--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@
 # Refer to https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/
 # for details on sources and exclusions. Note also .gitignore which is used by sonarqube
 #
-sonar.sources=common, core, fwoa-core, deployment
+sonar.sources=common, core, fwoa-core, fwoa-tools, fwoa-utilities, deployment, solutions
 
 # Focusing sonarqube analysis on non test code first and reducing noise from analysis of test code. Projects
 # can customize the exclusions to include analyzing of test code if desired
@@ -23,11 +23,20 @@ sonar.exclusions=\
     **/lib/**/*.map, \
     **/lib/**/*d.ts, \
     **/lib/**/*.json,git, \
-    common/scripts/* 
+    common/scripts/*, \
+    deployment/cdk-solution-helper/**, \
+    fwoa-utilities/javaHapiValidatorLambda/**, \
+    solutions/**/replay-ddbToES.js, \
+    solutions/**/sort-key-migration.js, \
+    solutions/**/integration-tests/**, \
+    fwoa-tools/src/export-script.py
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
-    **/jest.config.js
+    **/jest.config.js, \
+    solutions/**/scripts/**, \
+    solutions/**/bulkExport/**, \
+
 
 ## Python Specific Properties*
 # coverage
@@ -53,6 +62,7 @@ sonar.javascript.lcov.reportPaths= \
     fwoa-core/interface/temp/coverage/lcov.info, \
     fwoa-core/routing/temp/coverage/lcov-report, \
     fwoa-core/search-es/temp/coverage/lcov.info, \
+    fwoa-tools/temp/coverage/lcov.info, \
     solutions/deployment/temp/coverage/lcov.info, \
     solutions/smart-deployment/temp/coverage/lcov.info
     
