docs: update migration implementation guide

--- a/.viperlightignore
+++ b/.viperlightignore
@@ -76,4 +76,4 @@ README.md:5
 
 # PDF Implementation Guide
 FHIR Works on AWS Implementation Guide - 24-MAR-2023 - v6.0.0.pdf
-FHIR Works on AWS - Migration Tool User Guide - 05-JUL-2023.pdf
+FHIR Works on AWS - Migration Tool User Guide - 10JUL2023.pdf
