--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -93,6 +93,7 @@
     "semver": "^7.5.2",
     "jsonwebtoken@<=8.5.1": ">=9.0.0",
     "jsonwebtoken@<9.0.0": ">=9.0.0",
+    "word-wrap": ">=1.2.4",
     "xml2js@<0.5.0": ">=0.5.0",
     "yaml@<2.2.2": ">=2.2.2"
   },
