--- a/common/autoinstallers/commitizen/package.json
+++ b/common/autoinstallers/commitizen/package.json
@@ -5,5 +5,10 @@
   "private": true,
   "dependencies": {
     "commitizen": "^4.2.6"
+  },
+  "pnpm": {
+    "overrides": {
+      "word-wrap@<1.2.4": ">=1.2.4"
+    }
   }
 }
