--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -351,6 +351,10 @@
       "allowedCategories": ["production"]
     },
     {
+      "name": "readline",
+      "allowedCategories": ["tools"]
+    },
+    {
       "name": "sanitize-html",
       "allowedCategories": ["production"]
     },
