--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -47,6 +47,10 @@
       "allowedCategories": ["production", "tools"]
     },
     {
+      "name": "@babel/traverse",
+      "allowedCategories": ["tools"]
+    },
+    {
       "name": "@elastic/elasticsearch",
       "allowedCategories": ["production"]
     },
