--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -96,7 +96,8 @@
     "tough-cookie": ">=4.1.3",
     "word-wrap": ">=1.2.4",
     "xml2js@<0.5.0": ">=0.5.0",
-    "yaml@<2.2.2": ">=2.2.2"
+    "yaml@<2.2.2": ">=2.2.2",
+    "postcss": "^8.4.31"
   },
 
   /**
