--- a/fwoa-utilities/package.json
+++ b/fwoa-utilities/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@aws/eslint-config-fwoa-eslint-custom": "workspace:*",
+    "@babel/traverse": "^7.23.3",
     "@rushstack/eslint-config": "^3.0.0",
     "@rushstack/heft": "0.49.0",
     "@rushstack/heft-jest-plugin": "0.4.2",
