--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -235,6 +235,10 @@
       "allowedCategories": ["production"]
     },
     {
+      "name": "follow-redirects",
+      "allowedCategories": ["production"]
+    },
+    {
       "name": "fs",
       "allowedCategories": ["tools"]
     },
