--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -89,6 +89,7 @@
    * PNPM documentation: https://pnpm.io/package_json#pnpmoverrides
    */
   "globalOverrides": {
+    "follow-redirects": ">=1.15.4",
     "fast-xml-parser": "^4.2.5",
     "semver": "^7.5.2",
     "jsonwebtoken@<=8.5.1": ">=9.0.0",
